--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "motion": "^11.15.0",
     "next": "15.1.1",
     "next-intl": "^3.26.3",
